gccida/c1/convert_move
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:950:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:963:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:968:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v23; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:977:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v32; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:978:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:980:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:982:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:997:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1009:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v65; // [rsp+14h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1018:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1019:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[v4] != MODE_FLOAT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1033:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_lowpart( ( machine_mode)mode, v8); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1056:55: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( v5 - 7) < 2 || ( unsigned int)( mode_class_0[( unsigned int)v4] - 7) <= 1 ) 
                                                      ^~~~~~~~~~~~
                                                      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1063:30: error: use of undeclared identifier 'machine_mode'
v10 = simplify_gen_subreg( ( machine_mode)v4, x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 0); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1063:52: error: use of undeclared identifier 'machine_mode'
v10 = simplify_gen_subreg( ( machine_mode)v4, x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 0); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1063:67: error: expected expression
v10 = simplify_gen_subreg( ( machine_mode)v4, x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 0); 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1067:30: error: use of undeclared identifier 'machine_mode'
v13 = simplify_gen_subreg( ( machine_mode)v11, v8, ( machine_mode)*( ( unsigned __int8 *)v8 + 2), 0); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/expr.c:1067:54: error: use of undeclared identifier 'machine_mode'
v13 = simplify_gen_subreg( ( machine_mode)v11, v8, ( machine_mode)*( ( unsigned __int8 *)v8 + 2), 0); 
                                                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_move/src/obj/expr.o] Error 1
